# paooteme

paoooo/: CMakeLists.txt
paoooo/dir/: CMakeCache.txt  Makefile  cmake_install.cmake  paoooo
paoooo/src/: Animal.cpp  Animal.h  main.cpp
tema1/: CMakeLists.txt
tema1/src/: Animal.cpp  Animal.h  main.cpp
